Fix: CSS last-child margins on side bar items to increased readabilty

--- a/styles/components/sidebar.scss
+++ b/styles/components/sidebar.scss
@@ -69,6 +69,13 @@
 }
 .accordion-container {
 	margin-bottom: 0;
+	margin: 10px 0;
+	.sub-group-accordion:last-child {
+		margin-bottom: 30px;
+	}
+	.indicator-item:last-child {
+		margin-bottom: 20px;
+	}
 	.accordion-header {
 		color: #5a5a5a;
 		padding: 2px 6px;
